# workshop-agentic-rag

./: .gitignore  Dockerfile  FUTURE_WORK.md  README.md  system.md
.github/workflows/: docker-build.yaml  publish-app-image.yaml
LangFlow/: README.md  README.md.backup
LangFlow/data/: titanic_wiki.md
LangFlow/flows/: 00_ChatBot.json  01_RAG_Basic.json  02_RAG_Agentic.json  03_RAG_multiple_tools.json  04_RAG_memory.json  04_RAG_query_transformation.json  05_MCP_basic.json  05_MCP_tabpfn.json  06_MCP_tabpfn.json
LangFlow/setup/: .env.example  docker-compose.yml
app/: .env.example  Dockerfile  README.md  api_routes.py  app.py  chainlit.md  docker-compose.yml  docling_service.py  ingestion_pipeline.py  native_chat.py  prompt_generator.py  pyproject.toml  rag_tool.py  settings.py
app/.chainlit/: config.toml
app/api/: api_routes.py  prompt_generator.py
app/chat/: chat_history.py  native_chat.py
app/cli/: purge_inactive.py
app/core/: llm.py  settings.py
app/kb/: docling_scaler.py  ingest_docling.py  ingestion_pipeline.py  rag_tool.py  user_kb.py  user_profile.py
app/langflow/: langflow_client.py
app/public/: custom.css  custom.js  privacy.html  terms.html
app/session_upload/: citations.py  context.py  docling_client.py  handler.py
app/static/: admin.html  (+1 more)
ingestion/: .env.example  Dockerfile  app.py  chainlit.md  pyproject.toml  settings.py
k8s/: deployment.yaml  docling-rbac.yaml  docling-service.yaml  ingress.yaml  kb-docs-pvc.yaml  postgres.yaml  purge-cronjob.yaml  qdrant.yaml  sealed-secret.yaml  service.yaml
scripts/: seal-secret.sh
(+6 files in other folders)
