[project]
name = "workshop-ingestion"
version = "0.1.0"
description = "Chainlit UI for document ingestion into Qdrant via Docling"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=1.3.0",
    "litellm>=1.75.8",
    "qdrant-client>=1.14.1",
    "python-dotenv>=1.0.1",
    "docling>=1.5.0",
]

[tool.setuptools.packages.find]
include = []
